--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>测试</title>
+    <title>个人文档~ {{ title }}</title>
+    <link rel="stylesheet" href="../css/githubdark.css">
 </head>
 <body>
     {{ content }}
