--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>个人文档~ {{ title }}</title>
+    <link rel="stylesheet" href="/assets/css/style.scss">
 </head>
 <body>
     {{ content }}
