--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="/assets/css/style.scss">
 <head>
-    <title>个人文档~ {{ title }}</title>
+    <title>个人文档~ </title>
 </head>
 <body>
     {{ content }}
